[tool.poetry]
name = "apcupsd-exporter"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "Poll the apcupsd daemon and provide it to Prometheus."
authors = ["Paul Lockaby <paul@paullockaby.com>"]
packages = [{include = "apcupsd_exporter", from = "src"}]

[tool.poetry.scripts]
apcupsd_exporter = "apcupsd_exporter:main"

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
